🍘🪙 Updated with Glitch

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://images.pexels.com/photos/7245519/pexels-photo-7245519.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-image: url("https://cdn.pixabay.com/photo/2013/10/27/17/14/snowfall-201496_1280.jpg");
   color: white;
   text-align: center;
   
